fix for sign in not working

--- a/CafeProject/Cafe/templates/Cafe/index.html
+++ b/CafeProject/Cafe/templates/Cafe/index.html
@@ -339,7 +339,7 @@
 				    .fail(function(xhr) {
 				        console.log("Error: " + xhr.statusText);
 				    });
-	
+					return false;
 		  
 	  }
 		  
