--- a/CafeProject/Cafe/templates/Cafe/menuCafe.html
+++ b/CafeProject/Cafe/templates/Cafe/menuCafe.html
@@ -88,24 +88,12 @@ margin: 0 0 0 -100px;
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav pull-right">
           <li class="divider-vertical"></li>
-          <li class="dropdown">
-            <a class="dropdown-toggle" href="#" data-toggle="dropdown">Sign In <strong class="caret"></strong></a>
-            <div class="dropdown-menu" style="padding: 15px; padding-bottom: 0px;">
-			<!-- Login form here -->
-			<form action="[YOUR ACTION]" method="post" accept-charset="UTF-8">
-	<label>Username:</label>		
-  <input id="user_username" style="margin-bottom: 15px;" type="text" name="user[username]" size="30" />
-  <label>Password:</label>
-  <input id="user_password" style="margin-bottom: 15px;" type="password" name="user[password]" size="30" />
-  <input id="user_remember_me" style="float: left; margin-right: 10px;" type="checkbox" name="user[remember_me]" value="1" />
-  <label class="string optional" for="user_remember_me"> Remember me</label>
- 
-  <input class="btn btn-primary" style="clear: left; width: 100%; height: 32px; font-size: 13px;" type="submit" name="commit" value="Sign In" />
-  
-</form>
-<br/>
-			</div>
-			<li onmouseover="" style="cursor: pointer; position:relative; left:-10px;"><a onClick="logout() ">Log Out</a></li>
+          <li>
+            <li><a onclick="profile()" onmouseover="" style="cursor: pointer;"><strong id="profile">Welcome,</strong></a>
+           </li>
+           <li><a><strong id="credits">Balance:<span class="WebRupee">&#x20B9;</span></strong></a>
+           </li>
+			<li onmouseover="" style="cursor: pointer; position:relative; left:-10px;"><a onClick="logout() "><strong>Log Out</strong></a></li>
               
 			  
             
@@ -375,8 +363,14 @@ margin: 0 0 0 -100px;
  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="{% static 'Cafe/js/bootstrap.min.js' %}"></script>
 	<script>
+	if(sessionStorage.getItem("userid") == null)
+	{
+		//window.location.assign("index");
+	}
   $(document).ready(function(){
     $('.carousel').carousel();
+    $("#profile").append(sessionStorage.getItem("username"))
+    $("#credits").append(sessionStorage.getItem("usercredits"))
     onlyNumber("#beverage_quantity")
     onlyNumber("#chip_quantity")
     onlyNumber("#biscuit_quantity")
