--- a/CafeProject/Cafe/templates/Cafe/menuCafe.html
+++ b/CafeProject/Cafe/templates/Cafe/menuCafe.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="ico/favicon.ico">
+    {% load staticfiles %}
+    <link rel="shortcut icon" type="image/png" href="{% static 'Cafe/img/ugamDots.png' %}"/>
 	<style>
 	.colorclass{
 		background-color: #f2dede !important; 
@@ -50,7 +51,6 @@ margin: 0 0 0 -100px;
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-	{% load staticfiles %}
     <!-- Custom styles for this template -->
     <link href="{% static 'Cafe/css/bootstrap.css' %}" rel="stylesheet">
 	<script src="http://cdn.webrupee.com/js" type="text/javascript"></script>
