added order confirmed modal and removed alerts

--- a/CafeProject/Cafe/templates/Cafe/index.html
+++ b/CafeProject/Cafe/templates/Cafe/index.html
@@ -332,7 +332,7 @@ if(sessionStorage.getItem("userid")!= null)
 				      else
 				      {
 				    	  console.log("Inside true")
-				    	  alert("Data:"+JSON.stringify(data));
+				    	/*   alert("Data:"+JSON.stringify(data)); */
 				    	   	sessionStorage.setItem("username", data.username);
 				    	  	sessionStorage.setItem("userid", data.empid);
 				    	  	sessionStorage.setItem("userphone", data.phone);
