--- a/CafeProject/Cafe/templates/Cafe/profile.html
+++ b/CafeProject/Cafe/templates/Cafe/profile.html
@@ -72,14 +72,25 @@
  <div id="main_template" style="margin-left: auto;margin-right: auto;margin-top:10px; width:50%">   
     <div id="containerDiv">
 <div class="panel panel-primary" style="float:right;width:100%;border-color: rgb(168, 168, 235);box-shadow: 16px 3px 10px -7px #888, -10px 10px 20px -7px #888;">
-<div class="panel-heading"><span class="glyphicon glyphicon-shopping-cart"></span>Transactions</div>
+<div class="panel-heading" id="user_name"><span class="glyphicon glyphicon-user"></span> </div>
   <div class="panel-body">
-    <p id="panelBody" class="panelbodyclass"></p>
-  </div>
+    <address>
+  <strong>EMP ID: </strong>
+  <label id="emp_id"></label>
+</address>
 
+<address>
+  <strong>Balance: </strong>
+  <label id="balance"></label>
+</address>
+
+  </div>
+  <div class="panel panel-default">
+  <!-- Default panel contents -->
+  <div class="panel-heading">TRANSACTIONS : </div>
 
   <!-- Table -->
-  <table id="checkoutTable" class="table ">
+  <table id="checkoutTable" class="table table-hover table-condensed" style="overflow:scroll;max-height:200px">
          <thead>
           <tr>
             <th>No.</th>
@@ -103,6 +114,9 @@
 {% endif %}
         </tbody>
       </table>
+</div>
+
+  
 
     <h1 style="display:inline-block; position: relative;top: -20px;"><span class="label label-default label-large">Total : <span class="WebRupee">&#x20B9;</span><span id = "checkoutPrice"></span></span></h1>
     <div style="float:right;margin-left:5px;" id="backButton"></div>
@@ -112,10 +126,17 @@
 </div>
 </div>
 </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="{% static 'Cafe/js/bootstrap.min.js' %}"></script>
 <script type="text/javascript">
 $(document).ready(function(){
+		$("#user_name").append(sessionStorage.getItem("username"));
+		$("#emp_id").text(sessionStorage.getItem("userid"));
+		$("#balance").text(sessionStorage.getItem("usercredits"));
+		$("#profile").append(sessionStorage.getItem("username"));
+		$("#credits").append(sessionStorage.getItem("usercredits"));
+		
+	});
 
-	})
-}
 </script>    
     
