--- a/CafeProject/Cafe/templates/Cafe/profile.html
+++ b/CafeProject/Cafe/templates/Cafe/profile.html
@@ -122,7 +122,7 @@
 
     <h1 style="display:inline-block; position: relative;top: -20px;"><span class="label label-default label-large">Total : <span class="WebRupee">&#x20B9;</span><span id = "checkoutPrice"></span></span></h1>
     <div style="float:right;margin-left:5px;" id="backButton"></div>
-    <button id="checkoutButton" class="btn btn-success btn-lg" data-toggle="modal" onclick="validateCheckout()" style="float:right";margin-top:15px;">
+    <button id="checkoutButton" class="btn btn-success btn-lg" data-toggle="modal" onclick="redirectMenu()" style="float:right";margin-top:15px;">
   Menu
 </button>
 </div>
@@ -139,6 +139,9 @@ $(document).ready(function(){
 		$("#credits").append(sessionStorage.getItem("usercredits"));
 		
 	});
-
+function redirectMenu()
+{
+	window.location.assign("menucafe")
+}	
 </script>    
     
