--- a/CafeProject/Cafe/templates/Cafe/menuCafe.html
+++ b/CafeProject/Cafe/templates/Cafe/menuCafe.html
@@ -107,7 +107,7 @@ margin: 0 0 0 -100px;
    <!--  Carousel - consult the Twitter Bootstrap docs at 
       http://twitter.github.com/bootstrap/javascript.html#carousel -->
 	  <div id="main_template" style="margin-left: 115px;margin-right: 84px;margin-top:10px">
-	<div class="panel panel-default" style="width:55%;display:inline-block;box-shadow: 16px 3px 10px -7px #888, -10px 10px 20px -7px #888;">
+	<div class="panel panel-default" style="width:100%;display:inline-block;box-shadow: 16px 3px 10px -7px #888, -10px 10px 20px -7px #888;">
   <div class="panel-heading">
     <h3 class="panel-title"><span class="glyphicon glyphicon-cutlery"></span>  MENU</h3>
   </div>
@@ -303,7 +303,7 @@ margin: 0 0 0 -100px;
 </div>
 
 </div>
-<div id="containerDiv">
+<div style="display:none" id="containerDiv">
 <div class="panel panel-primary" style="float:right;width:100%;border-color: rgb(168, 168, 235);box-shadow: 16px 3px 10px -7px #888, -10px 10px 20px -7px #888;">
 <div class="panel-heading"><span class="glyphicon glyphicon-shopping-cart"></span>  Checkout Cart</div>
   <div class="panel-body">
