--- a/CafeProject/Cafe/templates/Cafe/menuCafe.html
+++ b/CafeProject/Cafe/templates/Cafe/menuCafe.html
@@ -129,7 +129,7 @@ margin: 0 0 0 -100px;
   <thead>
     <tr>
       <th width="70">Stock</th>
-      <th></th>
+      <th width="100"></th>
       <th width="500">Item Name</th>
       <th width="150">Price <span class="WebRupee">&#x20B9;</span></th>
       <th width="100">Quantity</th>
@@ -144,12 +144,14 @@ margin: 0 0 0 -100px;
         <td id = "menu_photo_{{ chip.id }}"><img width=100 height=100 src="{{ chip.photo.url }}"></img></td>
         <td id = "menu_name_{{ chip.id }}">{{ chip.name }}</td>    
         <td id = "menu_price_{{ chip.id }}">{{ chip.price }}</td>
-        <td><div class="input-group">
-      <input id="menu_quantity_{{ chip.id }}" type="text" class="form-control" >
-      <span class="input-group-btn">
-        <button onclick="productClick('chip',{{ chip.id }})" class="btn btn-default" type="button"><span class="glyphicon glyphicon-plus"></span></button>
-      </span>
-    </div></td>
+        <td>
+      
+     
+        <button onclick="increaseCounter({{ chip.id }})" class="btn btn-lg" type="button"><span class="glyphicon glyphicon-plus" style="display:inline-block"></span></button>
+      <label id="menu_quantity_{{ chip.id }}" type="text" class="form-control" style="display:inline-block;width:30%">1</label>
+      <button onclick="decreaseCounter({{ chip.id }})" class="btn btn-lg" type="button" style="display:inline-block"><span class="glyphicon glyphicon-minus"></span></button>
+      
+    </td>
        </tr>
     {% endfor %}
 {% else %}
@@ -164,7 +166,7 @@ margin: 0 0 0 -100px;
   <thead>
     <tr>
       <th width="70">Stock</th>
-      <th></th>
+      <th width="100"></th>
       <th width="500">Item Name</th>
       <th width="150">Price <span class="WebRupee">&#x20B9;</span></th>
       <th width="100">Quantity</th>
@@ -199,7 +201,7 @@ margin: 0 0 0 -100px;
   <thead>
     <tr>
       <th width="70">Stock</th>
-      <th></th>
+      <th width="100"></th>
       <th width="500">Item Name</th>
       <th width="150">Price <span class="WebRupee">&#x20B9;</span></th>
       <th width="100">Quantity</th>
@@ -234,7 +236,7 @@ margin: 0 0 0 -100px;
   <thead>
     <tr>
       <th width="70">Stock</th>
-      <th></th>
+      <th width="100"></th>
       <th width="500">Item Name</th>
       <th width="150">Price <span class="WebRupee">&#x20B9;</span></th>
       <th width="100">Quantity</th>
@@ -270,7 +272,7 @@ margin: 0 0 0 -100px;
   <thead>
     <tr>
       <th width="70">Stock</th>
-      <th></th>
+      <th width="100"></th>
       <th width="500">Item Name</th>
       <th width="150">Price <span class="WebRupee">&#x20B9;</span></th>
       <th width="100">Quantity</th>
@@ -600,6 +602,17 @@ function productClick(product,id)
   }
   
   // Function to remove items from the checkout cart 
+  
+  function increaseCounter(id){
+	 
+	  var valueQuantity=parseInt($("#menu_quantity_"+id).text())+1;
+	  $("#menu_quantity_"+id).text(valueQuantity);
+	 }
+	function decreaseCounter(id){
+	  
+		  var valueQuantity=parseInt($("#menu_quantity_"+id).text())-1;
+		  $("#menu_quantity_"+id).text(valueQuantity);
+	 }
   
   function removeCartItem(el){
   
