--- a/CafeProject/Cafe/templates/Cafe/menuCafe.html
+++ b/CafeProject/Cafe/templates/Cafe/menuCafe.html
@@ -129,7 +129,7 @@ margin: 0 0 0 -100px;
   <thead>
     <tr>
       <th width="70">Stock</th>
-      <th></th>
+      <th width="100"></th>
       <th width="500">Item Name</th>
       <th width="150">Price <span class="WebRupee">&#x20B9;</span></th>
       <th width="100">Quantity</th>
@@ -164,7 +164,7 @@ margin: 0 0 0 -100px;
   <thead>
     <tr>
       <th width="70">Stock</th>
-      <th></th>
+      <th width="100"></th>
       <th width="500">Item Name</th>
       <th width="150">Price <span class="WebRupee">&#x20B9;</span></th>
       <th width="100">Quantity</th>
@@ -199,7 +199,7 @@ margin: 0 0 0 -100px;
   <thead>
     <tr>
       <th width="70">Stock</th>
-      <th></th>
+      <th width="100"></th>
       <th width="500">Item Name</th>
       <th width="150">Price <span class="WebRupee">&#x20B9;</span></th>
       <th width="100">Quantity</th>
@@ -234,7 +234,7 @@ margin: 0 0 0 -100px;
   <thead>
     <tr>
       <th width="70">Stock</th>
-      <th></th>
+      <th width="100"></th>
       <th width="500">Item Name</th>
       <th width="150">Price <span class="WebRupee">&#x20B9;</span></th>
       <th width="100">Quantity</th>
@@ -270,7 +270,7 @@ margin: 0 0 0 -100px;
   <thead>
     <tr>
       <th width="70">Stock</th>
-      <th></th>
+      <th width="100"></th>
       <th width="500">Item Name</th>
       <th width="150">Price <span class="WebRupee">&#x20B9;</span></th>
       <th width="100">Quantity</th>
