added drop shadow effect to tiles

--- a/CafeProject/Cafe/templates/Cafe/index.html
+++ b/CafeProject/Cafe/templates/Cafe/index.html
@@ -153,7 +153,7 @@
 <div class="metro">
 {% if users_list %}
     {% for user in users_list %}
-    <div class="tile live bg-darkBlue" data-role="live-tile" data-effect="slideLeft">
+    <div class="tile live bg-darkBlue" data-role="live-tile" data-effect="slideLeft" style="box-shadow: 6px 6px 3px #000000;">
    <div class="tile-content image">
         	<img src="{{ user.photo.url }}">
     </div>
